# stax

./: .gitignore  CLAUDE.md  README.md
backend/: Cargo.toml  README.md  build.rs
backend/migrations/: 0001_initial.sql  0002_library_index.sql  0003_media_probe_metadata.sql  0004_media_subtitles.sql  0005_room_media.sql  0006_media_thumbnails.sql  0007_playback_mode_and_streams.sql  0008_media_keyframes.sql  0009_stream_copies.sql  0010_library_revision.sql  0011_library_performance_indexes.sql
backend/src/: api_error.rs  app.rs  clock.rs  config.rs  env_config.rs  ffmpeg.rs  frontend_assets.rs  lib.rs  library.rs  library_probe.rs  library_routes.rs  library_walk.rs  lifecycle.rs  main.rs  media_routes.rs  muxing.rs  origin.rs  persistence.rs  persistence_rows.rs  playback.rs  probes.rs  protocol.rs  room_routes.rs  rooms.rs  scan_gate.rs  stream_copies.rs  stream_copy_progress.rs  streaming.rs  thumbnails.rs
backend/src/api/: library.rs  media.rs  mod.rs  rooms.rs
backend/src/app/: router.rs
backend/src/persistence/: library.rs  mod.rs  probes.rs  records.rs  rooms.rs  rows.rs  stream_copies.rs  thumbnails.rs
backend/src/rooms/: socket.rs
backend/src/stream_copies/: mod.rs  paths.rs  subtitles.rs
backend/src/thumbnails/: mod.rs  render.rs
backend/tests/: sync_api.rs
docs/: architecture.md  product-direction.md  transcoder-production-checklist.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Toasts.tsx  api.ts  folderTree.ts  format.ts  randomName.ts  router.ts  streamCopyProgress.tsx  styles.css  (+5 more)
(+22 files in other folders)
